--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-<doc
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Ingrid">
+        <title>Controle de Estudantes</title>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <script src="script.js" defer></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    </head>
+
+    <body>
+        <div class="container-geral">
+            <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
+                <div class="titulo"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido">CONTROLE</h5> de Estudantes</h5></div>
+                <nav class="nav my-2 my-md-2 mr-md-3">
+                    <b>Cadastrar: </b>
+                    <a class="p-2 text-dark" href="#">Alunos</a>
+                    <a class="p-2 text-dark" href="#">|</a>
+                    <a class="p-2 text-dark" href="#">Sala</a>
+                </nav>
+            </div>
+
+            <div class="selecao">
+                <p>Sala de Aula: </p>
+                <select class="form-select form-select-sm" aria-label="Small select example">
+                    <option selected>Selecionar</option>
+                    <option value="1">TI</option>
+                    <option value="2">Manufatura</option>
+                    <option value="3">Análise de Dados</option>
+                </select>
+            </div>
+    
+            <div class="container container-alunos col-lg-12">
+                <h2>Alunos</h2>
+                <div class="row">
+                  <div class="col-el-4 aluno">
+                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                    <h2>Nome</h2>
+                    <p>Idade: </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
+                  </div>
+                  <div class="col-el-4 aluno">
+                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                    <h2>Nome</h2>
+                    <p>Idade: </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
+                  </div>
+                  <div class="col-el-4 aluno">
+                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                    <h2>Nome</h2>
+                    <p>Idade: </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
+                  </div>
+                  <div class="col-el-4 aluno">
+                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                    <h2>Nome</h2>
+                    <p>Idade: </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
+                  </div>
+                  <div class="col-el-4 aluno">
+                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                    <h2>Nome</h2>
+                    <p>Idade: </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
+                  </div>
+              </div>
+            </div>
+        </div>
+
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    </body>
+</html>
