--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container-geral">
             <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
-                <div class="titulo"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido">CONTROLE</h5> de Estudantes</h5></div>
+                <div class="titulo"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></div>
                 <nav class="nav my-2 my-md-2 mr-md-3">
                     <b>Cadastrar: </b>
                     <a class="p-2 text-dark" href="#">Alunos</a>
@@ -31,44 +31,50 @@
                     <option value="3">Análise de Dados</option>
                 </select>
             </div>
-    
-            <div class="container container-alunos col-lg-12">
-                <h2>Alunos</h2>
-                <div class="row">
-                  <div class="col-el-4 aluno">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Nome</h2>
-                    <p>Idade: </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
-                  </div>
-                  <div class="col-el-4 aluno">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Nome</h2>
-                    <p>Idade: </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
-                  </div>
-                  <div class="col-el-4 aluno">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Nome</h2>
-                    <p>Idade: </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
-                  </div>
-                  <div class="col-el-4 aluno">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Nome</h2>
-                    <p>Idade: </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
-                  </div>
-                  <div class="col-el-4 aluno">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Nome</h2>
-                    <p>Idade: </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Editar</a></p>
-                  </div>
-              </div>
+            
+            <div class="card-deck container col-12">
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h5 class="card-title">Ingrid</h5>
+                  <p class="card-text">Idade: 19</p>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+              </div> 
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h5 class="card-title">Ingrid</h5>
+                  <p class="card-text">Idade: 19</p>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+              </div> 
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h5 class="card-title">Ingrid</h5>
+                  <p class="card-text">Idade: 19</p>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+              </div> 
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h5 class="card-title">Ingrid</h5>
+                  <p class="card-text">Idade: 19</p>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+              </div> 
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h5 class="card-title">Ingrid</h5>
+                  <p class="card-text">Idade: 19</p>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+              </div> 
             </div>
         </div>
-
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
