--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <body>
         <div class="container-geral">
             <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
-                <div class="titulo"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></div>
+                <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
                 <nav class="nav my-2 my-md-2 mr-md-3">
                     <b>Cadastrar: </b>
-                    <a class="p-2 text-dark" href="#">Alunos</a>
-                    <a class="p-2 text-dark" href="#">|</a>
-                    <a class="p-2 text-dark" href="#">Sala</a>
+                    <a class="p-2 text-dark" href="cadastroAluno.html">Alunos</a>|
+                    <a class="p-2 text-dark" href="cadastroSala.html">Sala</a>
                 </nav>
             </div>
 
@@ -34,7 +33,7 @@
             
             <div class="card-deck container col-12">
               <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imgs/ingrid.png" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Ingrid</h5>
                   <p class="card-text">Idade: 19</p>
@@ -42,34 +41,34 @@
                 <button class="btn btn-primary" type="submit">Enviar</button>
               </div> 
               <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imgs/mari.png" alt="Imagem de capa do card">
                 <div class="card-body">
-                  <h5 class="card-title">Ingrid</h5>
-                  <p class="card-text">Idade: 19</p>
+                  <h5 class="card-title">Mariana</h5>
+                  <p class="card-text">Idade: 18</p>
                 </div>
                 <button class="btn btn-primary" type="submit">Enviar</button>
               </div> 
               <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imgs/ju.png" alt="Imagem de capa do card">
                 <div class="card-body">
-                  <h5 class="card-title">Ingrid</h5>
-                  <p class="card-text">Idade: 19</p>
+                  <h5 class="card-title">Juliana</h5>
+                  <p class="card-text">Idade: 21</p>
                 </div>
                 <button class="btn btn-primary" type="submit">Enviar</button>
               </div> 
               <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imgs/helena.png" alt="Imagem de capa do card">
                 <div class="card-body">
-                  <h5 class="card-title">Ingrid</h5>
-                  <p class="card-text">Idade: 19</p>
+                  <h5 class="card-title">Helena</h5>
+                  <p class="card-text">Idade: 18</p>
                 </div>
                 <button class="btn btn-primary" type="submit">Enviar</button>
               </div> 
               <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imgs/mile.png" alt="Imagem de capa do card">
                 <div class="card-body">
-                  <h5 class="card-title">Ingrid</h5>
-                  <p class="card-text">Idade: 19</p>
+                  <h5 class="card-title">Milena</h5>
+                  <p class="card-text">Idade: 18</p>
                 </div>
                 <button class="btn btn-primary" type="submit">Enviar</button>
               </div> 
