--- a/cadastroAluno.html
+++ b/cadastroAluno.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Ingrid">
-        <title>Cadastro de aluno</title>
+        <title>Cadastro | Aluno</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,12 +12,44 @@
 </head>
 
 <body>
-    <div class="container-geral">
-           
-
+    <div class="container-cadastro-alunos">
+        <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
+            <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
+            <nav class="nav my-2 my-md-2 mr-md-3">
+                <b>Cadastrar: </b>
+                <a class="p-2 text-dark" href="cadastroAluno.html">Alunos</a>|
+                <a class="p-2 text-dark" href="cadastroSala.html">Sala</a>
+            </nav>
+        </div>
+        <form>
+            <h2>Cadastrar um novo aluno</h2>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Nome</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Idade</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="idade">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Sexo</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="sexo">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlSelect1">Sala</label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>TI</option>
+                <option>Manufatura</option>
+                <option>Análise de Dados</option>
+              </select>
+            </div>
+            <button class="btn btn-forms" type="submit">CADASTRAR</button>
+          </form>
     </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
