--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
 
-    <body>
+    <body class="h-100">
         <div class="container-geral">
             <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
                 <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
@@ -31,47 +31,59 @@
                 </select>
             </div>
             
-            <div class="card-deck container col-12">
-              <div class="card">
-                <img class="card-img-top" src="imgs/ingrid.png" alt="Imagem de capa do card">
-                <div class="card-body">
-                  <h5 class="card-title">Ingrid</h5>
-                  <p class="card-text">Idade: 19</p>
-                </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
-              </div> 
-              <div class="card">
-                <img class="card-img-top" src="imgs/mari.png" alt="Imagem de capa do card">
-                <div class="card-body">
-                  <h5 class="card-title">Mariana</h5>
-                  <p class="card-text">Idade: 18</p>
-                </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
-              </div> 
-              <div class="card">
-                <img class="card-img-top" src="imgs/ju.png" alt="Imagem de capa do card">
-                <div class="card-body">
-                  <h5 class="card-title">Juliana</h5>
-                  <p class="card-text">Idade: 21</p>
-                </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
-              </div> 
-              <div class="card">
-                <img class="card-img-top" src="imgs/helena.png" alt="Imagem de capa do card">
-                <div class="card-body">
-                  <h5 class="card-title">Helena</h5>
-                  <p class="card-text">Idade: 18</p>
-                </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
-              </div> 
-              <div class="card">
-                <img class="card-img-top" src="imgs/mile.png" alt="Imagem de capa do card">
-                <div class="card-body">
-                  <h5 class="card-title">Milena</h5>
-                  <p class="card-text">Idade: 18</p>
-                </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
-              </div> 
+            <h2>Alunos</h2>
+            <div class="album py-5 cards">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="imgs/ingrid.png" data-holder-rendered="true">
+                      <div class="card-body">
+                        <h5 class="card-title">Ingrid</h5>
+                        <p class="card-text">Idade: 19</p>
+                      </div>
+                      <button class="btn btn-editar" type="submit">Editar</button>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="imgs/mari.png" data-holder-rendered="true">
+                      <div class="card-body">
+                        <h5 class="card-title">Mariana</h5>
+                        <p class="card-text">Idade: 18</p>
+                      </div>
+                      <button class="btn btn-editar" type="submit">Editar</button>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="imgs/ju.png" data-holder-rendered="true">
+                      <div class="card-body">
+                        <h5 class="card-title">Juliana</h5>
+                        <p class="card-text">Idade: 21</p>
+                      </div>
+                      <button class="btn btn-editar" type="submit">Editar</button>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="imgs/helena.png" data-holder-rendered="true">
+                      <div class="card-body">
+                        <h5 class="card-title">Helena</h5>
+                        <p class="card-text">Idade: 18</p>
+                      </div>
+                      <button class="btn btn-editar" type="submit">Editar</button>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="imgs/mile.png" data-holder-rendered="true">
+                      <div class="card-body">
+                        <h5 class="card-title">Milena</h5>
+                        <p class="card-text">Idade: 18</p>
+                      </div>
+                      <button class="btn btn-editar" type="submit">Editar</button>
+                    </div>
+                  </div>
             </div>
         </div>
 
