--- a/cadastroAluno.html
+++ b/cadastroAluno.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container-cadastro-alunos">
+    <div class="container-cadastro-alunos ">
         <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
             <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
             <nav class="nav my-2 my-md-2 mr-md-3">
@@ -21,21 +21,24 @@
                 <a class="p-2 text-dark" href="cadastroSala.html">Sala</a>
             </nav>
         </div>
-        <form>
+        <form class="col-md-4">
             <h2>Cadastrar um novo aluno</h2>
-            <div class="form-group">
+            <label for="input-img" class="input"><img src="https://cdn-icons-png.freepik.com/512/64/64572.png" id="img-aluno"></label>
+            <input type="file" id="input-img" style="display: none;">
+
+            <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Nome</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-4">
                 <label for="exampleFormControlInput1">Idade</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="idade">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="idade" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-4">
                 <label for="exampleFormControlInput1">Sexo</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="sexo">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="sexo" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-4">
               <label for="exampleFormControlSelect1">Sala</label>
               <select class="form-control" id="exampleFormControlSelect1">
                 <option>TI</option>
