--- a/cadastroSala.html
+++ b/cadastroSala.html
@@ -11,9 +11,9 @@
     </head>
 </head>
 
-<body>
+<body class="h-100">
     <div class="container-cadastro-salas">
-        <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
+        <div class="navbar d-flex wh-100 flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
             <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
             <nav class="nav my-2 my-md-2 mr-md-3">
                 <b>Cadastrar: </b>
@@ -21,13 +21,13 @@
                 <a class="p-2 text-dark" href="cadastroSala.html">Sala</a>
             </nav>
         </div>
-        <form>
+        <form class="col-md-4">
             <h2>Cadastrar uma nova sala</h2>
-            <div class="form-group">
+            <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Nome</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome">
             </div>
-            <div class="form-group">
+            <div class="form-group mb-4">
                 <label for="exampleFormControlInput1">Capacidade</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="capacidade">
             </div>
